--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "mdb-react-ui-kit": "^9.0.0",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.0"
   },
